# informative-path-planning

./: .gitignore  .gitmodules  continuous.py  log.txt  pyswarm.py
matlab/: untitled.m
python_scripts/: mcts_library.py
python_scripts/scripts/: CBTS.py  Evaluation.py  Frontier_SFC.py  GPModel.py  GridMap_library.py  MCTS.py  MCTS_rev.py  Optimizer.py  Path_Generator.py  Planning_Result.py  Robot.py  TODO.md  cont_MCTS.py  cont_MCTS_TR.py  continuous.py  exp.sh  harsh_env.py  ipp_experiment.py  log.txt  obstacles.py  projection_test.py  test2.py  test_c_mcts.py  test_kdtree.py  test_sdf_map.py  vis_grid_map.py
python_scripts/scripts/baseline/: global_BO.py
python_scripts/scripts/experiments/result/: parsing_gradient.m  parsing_reward.m
python_scripts/scripts/experiments/result/info_gain/: metrics_grad_0.0range_max_100.0 iter_1_MSE.txt  metrics_grad_0.0range_max_100.0 iter_1_UCB.txt  metrics_grad_0.0range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.0range_max_100.0 iter_1_mean.txt
python_scripts/scripts/experiments/result/info_gain/Box/: metrics_grad_0.05range_max_100.0 iter_1_MSE.txt  metrics_grad_0.05range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.05range_max_100.0 iter_1_info_gain.txt  metrics_grad_0.05range_max_100.0 iter_1_mean.txt  metrics_grad_0.0range_max_100.0 iter_1_MSE.txt  metrics_grad_0.0range_max_100.0 iter_1_UCB.txt  metrics_grad_0.0range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.0range_max_100.0 iter_1_mean.txt  metrics_grad_0.0range_max_50.0 iter_1_MSE.txt  metrics_grad_0.0range_max_50.0 iter_1_UCB.txt  metrics_grad_0.0range_max_50.0 iter_1_hotspot_info.txt  metrics_grad_0.0range_max_50.0 iter_1_mean.txt  metrics_grad_0.2range_max_100.0 iter_1_MSE.txt  metrics_grad_0.2range_max_100.0 iter_1_UCB.txt  metrics_grad_0.2range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.2range_max_100.0 iter_1_mean.txt
python_scripts/scripts/experiments/result/info_gain/Free/: metrics_grad_0.05range_max_100.0 iter_1_MSE.txt  metrics_grad_0.05range_max_100.0 iter_1_UCB.txt  metrics_grad_0.05range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.05range_max_100.0 iter_1_mean.txt  metrics_grad_0.05range_max_50.0 iter_1_MSE.txt  metrics_grad_0.05range_max_50.0 iter_1_UCB.txt  metrics_grad_0.05range_max_50.0 iter_1_hotspot_info.txt  metrics_grad_0.05range_max_50.0 iter_1_mean.txt  metrics_grad_0.0range_max_100.0 iter_1_MSE.txt  metrics_grad_0.0range_max_100.0 iter_1_UCB.txt  metrics_grad_0.0range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.0range_max_100.0 iter_1_info_gain.txt  metrics_grad_0.0range_max_100.0 iter_1_mean.txt  metrics_grad_0.0range_max_50.0 iter_1_MSE.txt  metrics_grad_0.0range_max_50.0 iter_1_UCB.txt  metrics_grad_0.0range_max_50.0 iter_1_hotspot_info.txt  metrics_grad_0.0range_max_50.0 iter_1_info_gain.txt  metrics_grad_0.0range_max_50.0 iter_1_mean.txt  metrics_grad_0.15range_max_100.0 iter_1_MSE.txt  metrics_grad_0.15range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.15range_max_100.0 iter_1_info_gain.txt  metrics_grad_0.15range_max_100.0 iter_1_mean.txt  metrics_grad_0.15range_max_50.0 iter_1_MSE.txt  metrics_grad_0.15range_max_50.0 iter_1_hotspot_info.txt  metrics_grad_0.15range_max_50.0 iter_1_info_gain.txt  metrics_grad_0.15range_max_50.0 iter_1_mean.txt  metrics_grad_0.1range_max_100.0 iter_1_MSE.txt  metrics_grad_0.1range_max_100.0 iter_1_UCB.txt  metrics_grad_0.1range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.1range_max_100.0 iter_1_mean.txt  metrics_grad_0.1range_max_50.0 iter_1_MSE.txt  metrics_grad_0.1range_max_50.0 iter_1_UCB.txt  metrics_grad_0.1range_max_50.0 iter_1_hotspot_info.txt  metrics_grad_0.1range_max_50.0 iter_1_mean.txt  metrics_grad_0.2range_max_100.0 iter_1_MSE.txt  metrics_grad_0.2range_max_100.0 iter_1_UCB.txt  metrics_grad_0.2range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.2range_max_100.0 iter_1_mean.txt  metrics_grad_0.2range_max_50.0 iter_1_MSE.txt  metrics_grad_0.2range_max_50.0 iter_1_hotspot_info.txt  (+2 more)
python_scripts/scripts/experiments/result/info_gain/Harsh/: metrics_grad_0.05range_max_50.0 iter_1_MSE.txt  metrics_grad_0.05range_max_50.0 iter_1_hotspot_info.txt  metrics_grad_0.05range_max_50.0 iter_1_mean.txt  (+13 more)
python_scripts/scripts/experiments/result/mean/: metrics_grad_0.0range_max_100.0 iter_1_MSE.txt  metrics_grad_0.0range_max_100.0 iter_1_UCB.txt  metrics_grad_0.0range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.0range_max_100.0 iter_1_info_gain.txt  metrics_grad_0.0range_max_100.0 iter_1_mean.txt
python_scripts/scripts/result/mean/Free/: metrics_grad_0.05range_max_100.0 iter_1_MSE.txt  metrics_grad_0.05range_max_100.0 iter_1_UCB.txt  metrics_grad_0.05range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.05range_max_100.0 iter_1_info_gain.txt  metrics_grad_0.05range_max_100.0 iter_1_mean.txt  metrics_grad_0.0range_max_100.0 iter_1_MSE.txt  metrics_grad_0.0range_max_100.0 iter_1_UCB.txt  metrics_grad_0.0range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.0range_max_100.0 iter_1_info_gain.txt  metrics_grad_0.0range_max_100.0 iter_1_mean.txt  metrics_grad_0.1range_max_100.0 iter_1_MSE.txt  metrics_grad_0.1range_max_100.0 iter_1_UCB.txt  metrics_grad_0.1range_max_100.0 iter_1_hotspot_info.txt  metrics_grad_0.1range_max_100.0 iter_1_info_gain.txt  metrics_grad_0.1range_max_100.0 iter_1_mean.txt
src/grid_map_ipp/: CMakeLists.txt  package.xml
src/grid_map_ipp/include/: FFD.hpp  Frontier.hpp  SFC.hpp
src/grid_map_ipp/include/SFC/: JPS.h  SFC.hpp  jps_example.h
src/grid_map_ipp/include/grid_map_ipp/: FFD.hpp  ObstacleGridConverter.hpp  grid_map_ipp.hpp  grid_map_sdf.hpp  kmeans.hpp  util.hpp  visualization.h  wavefront_frontier_detection.hpp
src/grid_map_ipp/launch/: FFD_test.launch  ft_test.launch  sfc_test.launch
src/grid_map_ipp/python/: binding.cpp
src/grid_map_ipp/rviz/: default.rviz
src/grid_map_ipp/src/: FFD.cpp  Frontier.cpp  JPS.cpp  ObstacleGridConverter.cpp  SFC.cpp  grid_map_ipp.cpp  kmeans.cpp  sort.py  util.cpp  wavefront_frontier_detection.cpp
src/grid_map_ipp/test/: clustering.py  test_FFD.cpp  test_SFC.cpp  test_frontier.cpp
(+77 files in other folders)
